[package]
name = "libyuv"
version = "1.0.3-lookback00"
edition = "2021"
authors = [ "Mr.Panda <xivistudios@gmail.com>" ]
description = "Raw FFI bindings to libyuv libraries."
readme = "./README.md"
homepage = "https://github.com/colourful-rtc/libyuv-rs"
repository = "https://github.com/colourful-rtc/libyuv-rs"
license = "MIT"
keywords = [
    "libyuv",
    "ffi"
]
publish = ["lookback"]

categories = [
    "multimedia",
    "api-bindings",
    "computer-vision"
]

[build-dependencies]
anyhow = "1.0.80"
which = "6.0.3"
